--- a/package.json
+++ b/package.json
@@ -7,15 +7,17 @@
     "dev": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
-    "test:unit": "vitest",
+    "tests": "vitest --reporter default",
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force",
     "coverage": "vitest run --coverage",
+    "test-report": "vitest --reporter default --reporter vitest-markdown-reporter run --coverage",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/"
   },
   "dependencies": {
     "pinia": "^2.1.7",
+    "vitest-markdown-reporter": "^0.1.2",
     "vue": "^3.4.21",
     "vue-i18n": "^9.12.1",
     "vue-router": "^4.3.0",
@@ -28,6 +30,7 @@
     "@types/node": "^20.12.5",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vitest/coverage-v8": "^1.5.0",
+    "@vitest/ui": "^1.5.0",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^13.0.0",
     "@vue/test-utils": "^2.4.5",
